--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,16 +1,18 @@
 <div class='bg-light p-5 rounded mt-3'>
-    <h1>Cadastrar</h1>
+    <h1>Cadastrar</h1> 
+    <form action="/cad" method="post">
         <div class="row">
             <div class="col-md-4">
                 <label for="examplename" class="form-label">Nome completo</label>
-                <input type="name" class="form-control" name="nome" id="exampleFormControlInput1" placeholder="name">
+                <input type="name" class="form-control" name="nome" id="exampleFormControlInput1" placeholder="name" required>
             </div>
             <div class="col-md-4">
                 <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                <input type="email" class="form-control" name="email" id="exampleFormControlInput1" placeholder="name@example.com">
+                <input type="email" class="form-control" name="email" id="exampleFormControlInput1" placeholder="name@example.com" required>
             </div>
             <div class="col-md-4">
                 <button class='btn btn-success'>Cadastrar</button>
             </div>  
         </div>
+    </form>    
 </div>
