fix: create validation login

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,9 +10,11 @@
                 <label for="exampleFormControlInput1" class="form-label">Email address</label>
                 <input type="email" class="form-control" name="email" id="exampleFormControlInput1" placeholder="name@example.com" required>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" style="padding: 10px 14px;">
                 <button class='btn btn-success'>Cadastrar</button>
             </div>  
         </div>
-    </form>    
+    </form>   
+    <br>
+    {{>_msg}} 
 </div>
